--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@telegraf/session": "^2.0.0-beta.7",
     "axios": "^1.12.2",
+    "ioredis": "^5.8.1",
     "mongoose": "^8.18.3",
     "nestjs-telegraf": "^2.9.1",
     "reflect-metadata": "^0.2.2",
