Add user timezone management to notification scheduling. Integrate date-fns-tz for timezone handling in NotificationCronProcessor and NotificationScheduleScene. Update User model to include timezone property and implement UserProvider methods for timezone retrieval and updates. Enhance user interaction by allowing timezone selection during notification setup.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@telegraf/session": "^2.0.0-beta.7",
     "axios": "^1.12.2",
     "bullmq": "^5.66.4",
+    "date-fns-tz": "^3.2.0",
     "ioredis": "^5.8.1",
     "mongoose": "^8.18.3",
     "nestjs-telegraf": "^2.9.1",
